# tiralabra-tuna

./: README.md  pyproject.toml
.github/workflows/: checks.yml
docs/: implementation.md  manual.md  specification.md  testing.md  week5.md  week6.md
docs/weekly_reports/: index.md  week1.md  week2.md  week3.md  week4.md
