[tool.poetry]
name = "tuna"
version = "0.1.0"
description = "A very simple digital guitar tuner"
authors = ["ladtopi <ladtopi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
